--- a/Pandemic Deck Tracker/Pandemic Deck Tracker/Base.lproj/Main.storyboard
+++ b/Pandemic Deck Tracker/Pandemic Deck Tracker/Base.lproj/Main.storyboard
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16G1114" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Deck Top-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
                 <viewController id="9pv-A4-QxB" customClass="DeckTopViewController" customModule="Pandemic_Deck_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
@@ -23,7 +21,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sj0-Ke-x88">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="535"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="9pv-A4-QxB" id="c6P-eD-O51"/>
@@ -47,7 +45,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="sj0-Ke-x88" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="5W5-Wt-OUf"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="sj0-Ke-x88" secondAttribute="bottom" id="6uj-Kt-I0l"/>
+                            <constraint firstItem="AtX-xp-TZg" firstAttribute="top" secondItem="sj0-Ke-x88" secondAttribute="bottom" id="7VZ-OV-HAF"/>
                             <constraint firstAttribute="trailing" secondItem="AtX-xp-TZg" secondAttribute="trailing" id="IUc-I1-wmn"/>
                             <constraint firstItem="AtX-xp-TZg" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="Kg6-af-Tex"/>
                             <constraint firstAttribute="trailing" secondItem="sj0-Ke-x88" secondAttribute="trailing" id="Uli-sz-1v0"/>
@@ -60,13 +58,13 @@
                         <outlet property="tableView" destination="sj0-Ke-x88" id="mxm-z5-4Z9"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
         <!--Discard-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
                 <viewController id="8rJ-Kc-sve" customClass="DiscardViewController" customModule="Pandemic_Deck_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
@@ -114,6 +112,7 @@
                         <outlet property="tableView" destination="b9M-uT-OMK" id="zBq-xS-IHB"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="750" y="360"/>
         </scene>
@@ -204,20 +203,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Infected City?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gds-TO-qMJ">
-                                <rect key="frame" x="134" y="28" width="106" height="21"/>
+                                <rect key="frame" x="134" y="48" width="106" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BWb-ar-Ydu">
-                                <rect key="frame" x="0.0" y="57" width="375" height="216"/>
+                                <rect key="frame" x="0.0" y="77" width="375" height="216"/>
                                 <connections>
                                     <outlet property="dataSource" destination="h5Y-Zc-Y1J" id="uJW-8M-Mec"/>
                                     <outlet property="delegate" destination="h5Y-Zc-Y1J" id="ff5-rt-gRk"/>
                                 </connections>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JHQ-V2-fgM">
-                                <rect key="frame" x="8" y="290" width="359" height="30"/>
+                                <rect key="frame" x="8" y="310" width="359" height="30"/>
                                 <state key="normal" title="OK"/>
                                 <connections>
                                     <action selector="pressOK:" destination="h5Y-Zc-Y1J" eventType="touchUpInside" id="rri-mh-Q5p"/>
